syntax = "proto3";

package registration;

option java_package = "com.gl.grpc";
option java_multiple_files = true;

message getUserByTechRequest {
string techStack = 1;

}

message getUserByTechResponse {
repeated userProfile userProfileArray = 1;
}

message userProfile {
string userName = 1;
int64 phoneNo = 2;
string emailId = 3;
string userPassword = 4;
string userRole = 5;
string techStack = 6;
string jobRole = 7;


}